--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,7 @@
 name = "tempverse"  # Keep your chosen project name
 compatibility_date = "2025-04-06" # Use the date from your error log or a more recent one
 
-[site]
-bucket = "."
+[pages]
+[pages.build]
+command = ""  # No build command needed for a static HTML file
+dir = "."      # Directory containing your static assets (the HTML file)
